Стили для текстов

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,4 +1,10 @@
 .header {
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
 }
 .header__logo {
   width: 28px;
@@ -22,10 +28,6 @@
 }
 .header__right {
   @media(min-width: $desktop-width) {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
