--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,9 +4,11 @@ $second-accent: #FF9618;
 $bg-wrap: #181818;
 $btn-light: #1B1B1B;
 $btn-transparrent: #A1A1A1;
+$text-light: #A3A3A3;
 $border: #7C7571;
 $black: #000000;
 $white: #FFFFFF;
+$bg-img: #2B2B2B;
 
 $font-family: "SF UI Display", "Arial", sans-serif;
 
