--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,5 +5,18 @@
 @import "global/general.scss";
 @import "blocks/page.scss";
 @import "blocks/header.scss";
+@import "blocks/main.scss";
 @import "blocks/promo.scss";
 @import "blocks/social.scss";
+@import "blocks/advantages.scss";
+@import "blocks/options.scss";
+@import "blocks/detals-control.scss";
+@import "blocks/detals-deal.scss";
+@import "blocks/options.scss";
+@import "blocks/renge-slider.scss";
+@import "blocks/radio.scss";
+@import "blocks/calculator.scss";
+@import "blocks/steps.scss";
+@import "blocks/review.scss";
+@import "blocks/footer.scss";
+@import "blocks/social-footer.scss";
