--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -9,6 +9,7 @@
   font-family: $font-family;
   font-size: 13px;
   font-style: normal;
+  letter-spacing: 0em;
   word-wrap: normal;
   color: $white;
   background-color: $black;
