--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -44,10 +44,19 @@
 }
 
 @font-face {
+  font-family: "Inter";
+  src: url("../fonts/Inter-Regular.woff2") format("woff2"),
+    url("../fonts/Inter-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "SF UI Display";
   src: url("../fonts/SFUIDisplay-Black.woff2") format("woff2"),
     url("../fonts/SFUIDisplay-Black.woff") format("woff");
-  font-weight: 400;
+  font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
