--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -14,6 +14,7 @@ $font-family: "SF UI Display", "Arial", sans-serif;
 
 // brackpoint
 $mobile-width: 320px;
+$mobile-width-max: 500px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
 
