--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,6 +5,7 @@ $bg-wrap: #181818;
 $btn-light: #1B1B1B;
 $btn-transparrent: #A1A1A1;
 $text-light: #A3A3A3;
+$text-lighter: #A9A9A9;
 $border: #7C7571;
 $black: #000000;
 $white: #FFFFFF;
