--- a/source/sass/blocks/detals-deal.scss
+++ b/source/sass/blocks/detals-deal.scss
@@ -1,3 +1,12 @@
+.detals-deal {
+  & p {
+    min-height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+}
 .detals-deal__income {
 
 }
