--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -3,6 +3,7 @@ $btn-accent: #FF9A10;
 $second-accent: #FF9618;
 $bg-wrap: #181818;
 $btn-light: #1B1B1B;
+$btn-gray: #696969;
 $btn-transparrent: #A1A1A1;
 $text-light: #A3A3A3;
 $text-lighter: #A9A9A9;
