--- a/source/sass/blocks/calculator.scss
+++ b/source/sass/blocks/calculator.scss
@@ -1,12 +1,48 @@
 .calculator {
+
+  padding: 23px 0 33px;
+
   & h2 {
     @include title;
   }
 }
+.calculator__wrapper {
+  width: calc(100% - 30px);
+  margin: 0 auto;
+}
 .calculator__form {
+  & fieldset {
+    padding: 0;
+    border: 0;
+  }
 }
 .calculator__result {
+  display: flex;
+  flex-direction: column;
+  padding: 26px 16px 31px 31px;
+  margin-top: 25px;
+  border-radius: 18px;
   background-color: $black;
+
+  & p {
+    display: flex;
+    flex-direction: column;
+  }
+
+  & div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  & a {
+    display: block;
+    width: calc(100% - 34px);
+    margin: 15px auto;
+    box-sizing: border-box;
+    padding: 15px 20px;
+    text-align: center;
+  }
 }
 .calculator__btn {
 }
@@ -15,6 +51,7 @@
 .calculator__result-title {
   font-weight: 400;
   line-height: 16px;
+  color: $text-lighter;
 
   @media (min-width: $desktop-width) {
     font-size: 15px;
