--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -4,6 +4,7 @@
   & p {
     font-weight: 400;
     line-height: 16px;
+    color: $text-lighter;
 
     @media (min-width: $desktop-width) {
       font-size: 15px;
@@ -12,8 +13,21 @@
   }
 }
 .radio__list {
+  display: flex;
+  background-color: $black;
+  border-radius: 21px;
 }
 .radio__list-item {
+  width: 50%;
+  padding: 13px 5px;
+  text-align: center;
+  color: $btn-gray;
+
+  &--active {
+    color: $btn-light;
+    background-color: $white;
+    border-radius: 21px;
+  }
 }
 .radio__meaning {
   font-weight: 500;
@@ -22,10 +36,5 @@
   @media (min-width: $desktop-width) {
     font-size: 16px;
     line-height: 15px;
-  }
-
-  &--active {
-    color: $btn-light;
-    background-color: $white;
   }
 }
