--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -36,7 +36,7 @@
     line-height: 15px;
   }
 }
-.adventages__result {
+.advantages__result {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
