--- a/source/sass/global/general.scss
+++ b/source/sass/global/general.scss
@@ -20,12 +20,14 @@
 }
 
 .btn--transparent {
+  padding: 9px 23px;
   color: $btn-transparrent;
   background-color: transparent;
   border: 1px solid $border;
 }
 
 .btn--accent {
+  padding: 15px 23px;
   color: $black;
   background: linear-gradient(52.76deg, #FF9A10 18.82%, #FF9519 77.36%);
   box-shadow: 0px 3px 15px rgba(255, 151, 10, 0.41);
@@ -65,7 +67,7 @@ ul {
 button {
   border: none;
   background: transparent;
-  // outline: 1px solid red;
+  outline: 1px solid red;
 }
 
 .accent-color {
