--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,10 +7,12 @@ $btn-gray: #696969;
 $btn-transparrent: #A1A1A1;
 $text-light: #A3A3A3;
 $text-lighter: #A9A9A9;
+$text-light1: #C0C0C0;
 $border: #7C7571;
 $black: #000000;
 $white: #FFFFFF;
 $bg-img: #2B2B2B;
+$border: #4C4C4C;
 
 $font-family: "SF UI Display", "Arial", sans-serif;
 
