--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,4 +1,6 @@
 .advantages {
+  padding-bottom: 25px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 .advantages__wrapper {
   width: calc(100% - 30px);
@@ -42,10 +44,27 @@
   justify-content: space-evenly;
 
   & p {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 29%;
     margin-right: 10px;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 10px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right: 6px;
+      width: 12px;
+      height: 12px;
+      background-image: url("../img/icon-quest.svg");
+      background-repeat: no-repeat;
+      background-position: top center;
+      background-size: contain;
+    }
   }
 }
 .advantages__sum {
