--- a/source/sass/global/general.scss
+++ b/source/sass/global/general.scss
@@ -67,7 +67,7 @@ ul {
 button {
   border: none;
   background: transparent;
-  outline: 1px solid red;
+  // outline: 1px solid red;
 }
 
 .accent-color {
