--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -11,7 +11,12 @@
   }
 }
 .footer__contacts {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  align-items: center;
   align-self: center;
+
   & p {
     font-weight: 400;
     line-height: 19px;
@@ -25,6 +30,7 @@
 }
 .footer__social {
 }
+
 .footer__contacts-phone {
   font-size: 20px;
   font-weight: 600;
