--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -51,11 +51,25 @@
   }
 
   & .btn {
+    position: relative;
     display: block;
     width: calc(100% - 80px);
     margin: 15px auto;
     box-sizing: border-box;
     text-align: left;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 17px;
+      right: 20px;
+      width: 15px;
+      height: 12px;
+      background-image: url("../img/icon-right.svg");
+      background-repeat: no-repeat;
+      background-position: top center;
+      background-size: contain;
+    }
   }
 }
 
@@ -66,6 +80,7 @@
 .options__detals {
   display: flex;
   justify-content: space-between;
+  column-gap: 15px;
   padding: 0 27px 60px 17px;
   background: $black;
   border-radius: 20px;
@@ -109,7 +124,6 @@
       background-repeat: no-repeat;
       background-position: top center;
       background-size: contain;
-
     }
   }
 }
