--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -86,6 +86,11 @@
   & li {
     margin-bottom: 15px;
   }
+
+  @media (min-width: $mobile-width-max) {
+    justify-content: space-evenly;
+    text-align: center;
+  }
 }
 .footer__block-borrowers {
   width: 40%;
@@ -102,6 +107,7 @@
   grid-auto-flow: column;
   column-gap: 41px;
   row-gap: 15px;
+
   & a {
     font-size: 16px;
     font-weight: 600;
@@ -115,10 +121,19 @@
       line-height: 18px;
     }
   }
+
+  @media (min-width: $mobile-width-max) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 83%;
+    margin: 0 auto;
+  }
 }
 .footer__bottom {
   display: flex;
   flex-direction: column;
+
   & p {
     font-size: 11px;
     font-weight: 400;
@@ -126,11 +141,20 @@
     color: $text-light1;
     margin-top: 42px;
 
+    @media (min-width: $mobile-width-max){
+      width: 80%;
+      margin: 42px auto 0;
+    }
+
     @media (min-width: $desktop-width) {
       font-size: 15px;
       line-height: 22px;
     }
   }
+
+  // @media (min-width: $mobile-width-max) {
+  //   align-items: center;
+  // }
 }
 .footer__form {
   order: -1;
@@ -140,6 +164,11 @@
     margin-top: 5px;
     padding: 0;
     border: none;
+  }
+
+  @media (min-width: $mobile-width-max) {
+    width: 62%;
+    margin: 0 auto;
   }
 }
 
