--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -38,9 +38,10 @@
     line-height: 10px;
     color: $text-lighter;
 
-    @media (min-width: $tablet-width) {
+    @media (min-width: $mobile-width-max) {
       font-size: 15px;
       line-height: 14px;
+      text-align: center;
     }
   }
 
@@ -132,9 +133,10 @@
   font-weight: 400;
   line-height: 19px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-width-max) {
     font-size: 17px;
     line-height: 25px;
+    text-align: center;
   }
 }
 
