--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -23,8 +23,23 @@
 
 .review__btn-mb {
   position: absolute;
-  right: 6px;
-  top: 20%;
+  right: 0;
+  top: 0;
+  width: 11%;
+  height: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media (min-width: $mobile-width-max) {
+    height: 60%;
+  }
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.review__btn-icon {
   width: 15px;
   height: 11px;
   background-image: url("../img/icon-arrow-bottom.svg");
@@ -32,11 +47,8 @@
   background-position: top center;
   background-size: contain;
   transform: rotate(-90deg);
-
-  @media (min-width: $tablet-width) {
-    display: none;
-  }
 }
+
 .review__more {
   width: 57%;
   margin: 0 auto;
@@ -50,6 +62,10 @@
   background-color: $bg-img;
   border-radius: 10px;
 
+  @media (min-width: $mobile-width-max) {
+    border-radius: 30px;
+  }
+
   @media (min-width: $desktop-width) {
     border-radius: 18px;
   }
@@ -57,6 +73,10 @@
   & img {
     border-radius: 16px;
     width: 100%;
+
+    @media (min-width: $mobile-width-max) {
+      border-radius: 30px;
+    }
 
     @media (min-width: $desktop-width) {
       border-radius: 18px;
@@ -78,6 +98,11 @@
     background-position: top center;
     background-size: contain;
     transform: translateX(-50%);
+
+    @media (min-width: $mobile-width-max) {
+      width: 27px;
+      height: 27px;
+    }
   }
   &::after {
     content: "";
@@ -91,6 +116,11 @@
     transform: translateX(-50%);
     border-radius: 100%;
 
+    @media (min-width: $mobile-width-max) {
+      top: 26%;
+      width: 61px;
+      height: 59px;
+    }
   }
 }
 
@@ -113,7 +143,11 @@
   border-radius: 3px;
   backdrop-filter: blur(7.2px);
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $mobile-width-max) {
+    width: 86px;
+    height: 32px;
+    bottom: 18%;
+    padding-left: 7px;
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.4px;
@@ -127,7 +161,7 @@
   font-weight: 500;
   line-height: 13px;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $mobile-width-max) {
     font-size: 20px;
     line-height: 20px;
   }
