--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 10px 0;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     position: absolute;
     top: 0;
     left: 0;
