--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -11,6 +11,24 @@
     flex-direction: column;
     align-items: center;
   }
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    width: calc(100% - 180px);
+    align-items: flex-start;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right: -10%;
+      width: 244px;
+      height: 165px;
+      background-image: url("../img/icon-adv.svg");
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
 }
 .advantages__text-main {
   margin: 15px 0;
