--- a/source/sass/blocks/detals-control.scss
+++ b/source/sass/blocks/detals-control.scss
@@ -1,14 +1,21 @@
 .detals-control {
+
 }
 .detals-control__income {
-
   width: 35%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
 
   @media (min-width: $mobile-width-max) {
     width: 50%;
     align-items: center;
+  }
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
   }
 }
 .detals-control__percent {
@@ -23,6 +30,12 @@
   @media (min-width: $mobile-width-max) {
     width: 50%;
   }
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
 }
 .detals-control__text {
   min-height: 50px;
@@ -31,6 +44,10 @@
   line-height: 17px;
 
   @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-weight: 700;
     line-height: 20px;
   }
@@ -48,6 +65,7 @@
 
     @media (min-width: $desktop-width) {
       display: block;
+      max-width: 77px;
     }
   }
 }
