--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,5 +1,31 @@
 .social {
   display: none;
+
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 30%;
+    left: 8%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
 }
 .social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 37px;
+  height: 37px;
+  background-color: $white;
+  border-radius: 100%;
+
+  & svg {
+    fill: $black;
+  }
+
+  &--youtube {
+    & svg {
+      fill: red;
+    }
+  }
 }
