--- a/source/sass/blocks/detals-deal.scss
+++ b/source/sass/blocks/detals-deal.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+
+    @media (min-width: $tablet-width) {
+      min-height: auto;
+    }
   }
 }
 .detals-deal__income {
@@ -42,7 +46,7 @@
     font-weight: 900;
     line-height: 31px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     font-size: 33px;
     line-height: 41px;
   }
