--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -27,6 +27,8 @@
   @media (min-width: $tablet-width) {
     display: block;
     width: 48%;
+    background: none;
+    background-color: $bg-wrap;
     border-radius: 18px;
   }
 
@@ -66,33 +68,18 @@
     background-color: $bg-wrap;
 
   }
-
-  & .btn {
-    position: relative;
-    display: block;
-    width: calc(100% - 80px);
-    margin: 15px auto;
-    box-sizing: border-box;
-    text-align: left;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 17px;
-      right: 20px;
-      width: 15px;
-      height: 12px;
-      background-image: url("../img/icon-right.svg");
-      background-repeat: no-repeat;
-      background-position: top center;
-      background-size: contain;
-    }
-  }
 }
 
 .options__chapter {
   margin: 0 10px;
 
+  @media (min-width: $tablet-width) {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
 }
 .options__detals {
   display: flex;
@@ -105,11 +92,12 @@
   @media (min-width: $tablet-width) {
     flex-direction: column;
     row-gap: 15px;
-    padding: 30px 5px;
+    padding: 10px 5px 50px;
 
     &--deal {
       flex-direction: row;
-      padding: 5px 20px;
+      justify-content: space-evenly;
+      padding: 20px;
     }
   }
   @media (min-width: $desktop-width) {
@@ -123,7 +111,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     padding: 0;
     background-color: $black;
     border-radius: 20px;
@@ -138,7 +126,7 @@
 
   @media (min-width: $tablet-width) {
     display: block;
-    padding: 13px;
+    padding: 13px 4px;
     font-size: 12px;
     line-height: 15px;
     background: none;
@@ -206,6 +194,15 @@
   color: $text-lighter;
 
   @media (min-width: $tablet-width) {
+    width: 96%;
+    padding: 7px 10px;
+    left: 9px;
+    bottom: 15%;
+    font-size: 11px;
+    text-align: center;
+  }
+
+  @media (min-width: $desktop-width) {
     font-size: 15px;
     line-height: 18px;
   }
@@ -246,4 +243,30 @@
     border-radius: 20px 20px 0 0;
   }
 
+}
+
+.options__btn {
+  position: relative;
+  display: block;
+  width: calc(100% - 80px);
+  margin: 15px auto;
+  box-sizing: border-box;
+  text-align: left;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 17px;
+    right: 20px;
+    width: 15px;
+    height: 12px;
+    background-image: url("../img/icon-right.svg");
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: contain;
+  }
+
+  @media (min-width: $tablet-width) {
+    justify-self: flex-end;
+  }
 }
