--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -35,6 +35,7 @@
   @media (min-width: $tablet-width) {
     max-width: 420px;
     margin: 88px 60px 0;
+    padding-top: 35px;
   }
 
   @media (min-width: $desktop-width) {
