--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -11,6 +11,10 @@
   display: flex;
   justify-content: flex-start;
   margin-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    justify-content: space-evenly;
+  }
 }
 
 .review__content-wrapper {
@@ -66,6 +70,11 @@
     border-radius: 30px;
   }
 
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    width: 28%;
+  }
   @media (min-width: $desktop-width) {
     border-radius: 18px;
   }
@@ -103,6 +112,10 @@
       width: 27px;
       height: 27px;
     }
+
+    @media (min-width: $tablet-width) {
+      top: 15%;
+    }
   }
   &::after {
     content: "";
@@ -118,6 +131,12 @@
 
     @media (min-width: $mobile-width-max) {
       top: 29%;
+      width: 61px;
+      height: 59px;
+    }
+
+    @media (min-width: $tablet-width) {
+      top: 7%;
       width: 61px;
       height: 59px;
     }
@@ -153,6 +172,10 @@
     letter-spacing: 0.4px;
   }
 
+  @media (min-width: $tablet-width) {
+    width: 106px;
+    bottom: 25%;
+  }
 }
 .review__title {
   padding: 8px 9px 12px;
@@ -165,6 +188,16 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .review__guarantees {
@@ -173,11 +206,19 @@
   border: 1px solid $border;
   border-radius: 18px;
 
+  @media (min-width: $tablet-width) {
+    padding-left: 35px;
+  }
+
   & h3 {
     font-size: 18px;
     font-weight: 500;
     line-height: 22px;
     text-align: center;
+
+    @media (min-width: $tablet-width) {
+      text-align: left;
+    }
 
     @media (min-width: $desktop-width) {
       font-size: 30px;
@@ -190,12 +231,30 @@
     margin-bottom: 25px;
     line-height: 19px;
     color: $text-light1;
+
+    @media (min-width: $tablet-width) {
+      width: 75%;
+      margin: 0;
+      padding-right: 15px;
+    }
   }
 }
 
 .review__consult-btn {
-  width: 77%;
+  width: 60%;
   margin: 0 auto;
   padding: 5px;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    width: 25%;
+  }
+}
+
+.review__guarantees-wrapper {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 }
